@@ -124,6 +124,193 @@ public class OgnlRuntime {
     private static boolean _jdk15 = false;
     private static boolean _jdkChecked = false;
 
+    /**
+     * Control usage of JDK9+ access handler using the JVM option:
+     *   -Dognl.UseJDK9PlusAccessHandler=true
+     *   -Dognl.UseJDK9PlusAccessHandler=false
+     *
+     * Note: Set to "true" to allow the new JDK9 and later behaviour, <b>provided a newer JDK9+
+     *   is detected</b>.  By default the standard pre-JDK9 AccessHandler will be used even when
+     *   running on JDK9+, so users must "opt-in" in order to enable the alternate JDK9+ AccessHandler.
+     *   Using the JDK9PlusAccessHandler <b>may</b> avoid / mask JDK9+ warnings of the form:
+     *     "WARNING: Illegal reflective access by ognl.OgnlRuntime"
+     *   or provide an alternative  when running in environments set with "--illegal-access=deny".
+     *
+     * Note:  The default behaviour is to use the standard pre-JDK9 access handler.
+     *   Using the "false" value has the same effect as omitting the option completely.
+     *
+     * Warning: Users are <b>strongly advised</b> to review their code and confirm they really
+     *   need the AccessHandler modifying access levels, looking at alternatives to avoid that need.
+     */
+    static final String USE_JDK9PLUS_ACESS_HANDLER = "ognl.UseJDK9PlusAccessHandler";
+
+    /**
+     * Control usage of "stricter" invocation processing by invokeMethod() using the JVM options:
+     *    -Dognl.UseStricterInvocation=true
+     *    -Dognl.UseStricterInvocation=false
+     *
+     * Note: Using the "true" value has the same effect as omitting the option completely.
+     *   The default behaviour is to use the "stricter" invocation processing.
+     *   Using the "false" value reverts to the older "less strict" invocation processing
+     *   (in the event the "stricter" processing causes issues for existing applications).
+     */
+    static final String USE_STRICTER_INVOCATION = "ognl.UseStricterInvocation";
+
+    /**
+     * Hold environment flag state associated with USE_JDK9PLUS_ACESS_HANDLER.
+     *   Default: false (if not set)
+     */
+    private static final boolean _useJDK9PlusAccessHandler;
+    static {
+        boolean initialFlagState = false;
+        try {
+            final String propertyString = System.getProperty(USE_JDK9PLUS_ACESS_HANDLER);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = Boolean.parseBoolean(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _useJDK9PlusAccessHandler = initialFlagState;
+    }
+
+    /**
+     * Hold environment flag state associated with USE_STRICTER_INVOCATION.
+     *   Default: true (if not set)
+     */
+    private static final boolean _useStricterInvocation;
+    static {
+        boolean initialFlagState = true;
+        try {
+            final String propertyString = System.getProperty(USE_STRICTER_INVOCATION);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = Boolean.parseBoolean(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _useStricterInvocation = initialFlagState;
+    }
+
+    /*
+     * Attempt to detect the system-reported Major Java Version (e.g. 5, 7, 11).
+     */
+    private static final int _majorJavaVersion = detectMajorJavaVersion();
+    private static final boolean _jdk9Plus = _majorJavaVersion >= 9;
+
+    /*
+     * Assign an accessibility modification mechanism, based on Major Java Version and Java option flag
+     *   flag {@link OgnlRuntime#USE_JDK9PLUS_ACESS_HANDLER}.
+     *
+     * Note: Will use the standard Pre-JDK9 accessibility modification mechanism unless OGNL is running
+     *   on JDK9+ and the Java option flag has also been set true.
+     */
+    private static final AccessibleObjectHandler _accessibleObjectHandler;
+    static {
+        _accessibleObjectHandler = usingJDK9PlusAccessHandler() ? AccessibleObjectHandlerJDK9Plus.createHandler() :
+            AccessibleObjectHandlerPreJDK9.createHandler();
+    }
+
+    /**
+     * Private references for use in blocking direct invocation by invokeMethod().
+     */
+    private static final Method SYS_CONSOLE_REF;
+    private static final Method SYS_EXIT_REF;
+    private static final Method AO_SETACCESSIBLE_REF;
+    private static final Method AO_SETACCESSIBLE_ARR_REF;
+
+    /**
+     * Initialize the Method references used for blocking usage within invokeMethod().
+     */
+    static {
+        Method setAccessibleMethod = null;
+        Method setAccessibleMethodArray = null;
+        Method systemExitMethod = null;
+        Method systemConsoleMethod = null;
+        try {
+            setAccessibleMethod = AccessibleObject.class.getMethod("setAccessible", new Class<?>[]{boolean.class});
+        } catch (NoSuchMethodException nsme) {
+            // Should not happen.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing setAccessible method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access setAccessible method", se);
+        } finally {
+            AO_SETACCESSIBLE_REF = setAccessibleMethod;
+        }
+
+        try {
+            setAccessibleMethodArray = AccessibleObject.class.getMethod("setAccessible", new Class<?>[]{AccessibleObject[].class, boolean.class});
+        } catch (NoSuchMethodException nsme) {
+            // Should not happen.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing setAccessible method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access setAccessible method", se);
+        } finally {
+            AO_SETACCESSIBLE_ARR_REF = setAccessibleMethodArray;
+        }
+
+        try {
+            systemExitMethod = System.class.getMethod("exit", new Class<?>[]{int.class});
+        } catch (NoSuchMethodException nsme) {
+            // Should not happen.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing exit method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access exit method", se);
+        } finally {
+            SYS_EXIT_REF = systemExitMethod;
+        }
+
+        try {
+            systemConsoleMethod = System.class.getMethod("console", new Class<?>[]{});  // Not available in JDK 1.5 or earlier
+        } catch (NoSuchMethodException nsme) {
+            // May happen for JDK 1.5 and earlier.  To debug, uncomment the next line.
+            //throw new IllegalStateException("OgnlRuntime initialization missing console method", nsme);
+        } catch (SecurityException se) {
+            // May be blocked by existing SecurityManager.  To debug, uncomment the next line.
+            //throw new SecurityException("OgnlRuntime initialization cannot access console method", se);
+        } finally {
+            SYS_CONSOLE_REF = systemConsoleMethod;
+        }
+    }
+
+    /**
+     * Control usage of the OGNL Security Manager using the JVM option:
+     *   -Dognl.security.manager=true  (or any non-null value other than 'disable')
+     *
+     * Omit '-Dognl.security.manager=' or nullify the property to disable the feature.
+     *
+     * To forcibly disable the feature (only possible at OGNL Library initialization, use the option:
+     *   -Dognl.security.manager=forceDisableOnInit
+     *
+     * Users that have their own Security Manager implementations and no intention to use the OGNL SecurityManager
+     *   sandbox may choose to use the 'forceDisableOnInit' flag option for performance reasons (avoiding overhead
+     *   involving the system property security checks - when that feature will not be used).
+     */
+    static final String OGNL_SECURITY_MANAGER = "ognl.security.manager";
+    static final String OGNL_SM_FORCE_DISABLE_ON_INIT = "forceDisableOnInit";
+
+    /**
+     * Hold environment flag state associated with OGNL_SECURITY_MANAGER.  See
+     * {@link OgnlRuntime#OGNL_SECURITY_MANAGER} for more details.
+     *   Default: false (if not set).
+     */
+    private static final boolean _disableOgnlSecurityManagerOnInit;
+    static {
+        boolean initialFlagState = false;
+        try {
+            final String propertyString = System.getProperty(OGNL_SECURITY_MANAGER);
+            if (propertyString != null && propertyString.length() > 0) {
+                initialFlagState = OGNL_SM_FORCE_DISABLE_ON_INIT.equalsIgnoreCase(propertyString);
+            }
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        _disableOgnlSecurityManagerOnInit = initialFlagState;
+    }
+
     static final ClassCache _methodAccessors = new ClassCacheImpl();
     static final ClassCache _propertyAccessors = new ClassCacheImpl();
     static final ClassCache _elementsAccessors = new ClassCacheImpl();
@@ -399,6 +586,24 @@ public class OgnlRuntime {
         _jdkChecked = true;
 
         return _jdk15;
+    }
+
+    /**
+     * Get the Major Java Version detected by OGNL.
+     *
+     * @return Detected Major Java Version, or 5 (minimum supported version for OGNL) if unable to detect.
+     */
+    public static int getMajorJavaVersion() {
+        return _majorJavaVersion;
+    }
+
+    /**
+     * Check if the detected Major Java Version is 9 or higher (JDK 9+).
+     *
+     * @return Return true if the Detected Major Java version is 9 or higher, otherwise false.
+     */
+    public static boolean isJdk9Plus() {
+        return _jdk9Plus;
     }
 
     public static String getNumericValueGetter(Class type)
@@ -826,6 +1031,28 @@ public class OgnlRuntime {
         Boolean methodAccessCacheValue;
         Boolean methodPermCacheValue;
 
+        if (_useStricterInvocation) {
+            final Class methodDeclaringClass = method.getDeclaringClass();  // Note: synchronized(method) call below will already NPE, so no null check.
+            if ( (AO_SETACCESSIBLE_REF != null && AO_SETACCESSIBLE_REF.equals(method)) ||
+                 (AO_SETACCESSIBLE_ARR_REF != null && AO_SETACCESSIBLE_ARR_REF.equals(method)) ||
+                 (SYS_EXIT_REF != null && SYS_EXIT_REF.equals(method)) ||
+                 (SYS_CONSOLE_REF != null && SYS_CONSOLE_REF.equals(method)) ||
+                 AccessibleObjectHandler.class.isAssignableFrom(methodDeclaringClass) ||
+                 ClassResolver.class.isAssignableFrom(methodDeclaringClass) ||
+                 MethodAccessor.class.isAssignableFrom(methodDeclaringClass) ||
+                 MemberAccess.class.isAssignableFrom(methodDeclaringClass) ||
+                 OgnlContext.class.isAssignableFrom(methodDeclaringClass) ||
+                 Runtime.class.isAssignableFrom(methodDeclaringClass) ||
+                 ClassLoader.class.isAssignableFrom(methodDeclaringClass) ||
+                 ProcessBuilder.class.isAssignableFrom(methodDeclaringClass) ||
+                 AccessibleObjectHandlerJDK9Plus.unsafeOrDescendant(methodDeclaringClass) ) {
+                // Prevent calls to some specific methods, as well as all methods of certain classes/interfaces
+                //   for which no (apparent) legitimate use cases exist for their usage within OGNL invokeMethod().
+                throw new IllegalAccessException("Method [" + method + "] cannot be called from within OGNL invokeMethod() " +
+                        "under stricter invocation mode.");
+            }
+        }
+
         // only synchronize method invocation if it actually requires it
 
         synchronized(method) {
@@ -888,11 +1115,11 @@ public class OgnlRuntime {
                     }
                 }
 
-                ((AccessibleObject) method).setAccessible(true);
+                _accessibleObjectHandler.setAccessible(method, true);
                 try {
                     result = invokeMethodInsideSandbox(target, method, argsArray);
                 } finally {
-                    ((AccessibleObject) method).setAccessible(false);
+                    _accessibleObjectHandler.setAccessible(method, false);
                 }
             }
         } else
@@ -916,8 +1143,12 @@ public class OgnlRuntime {
     private static Object invokeMethodInsideSandbox(Object target, Method method, Object[] argsArray)
             throws InvocationTargetException, IllegalAccessException {
 
+        if (_disableOgnlSecurityManagerOnInit) {
+            return method.invoke(target, argsArray);  // Feature was disabled at OGNL initialization.
+        }
+
         try {
-            if (System.getProperty("ognl.security.manager") == null) {
+            if (System.getProperty(OGNL_SECURITY_MANAGER) == null) {
                 return method.invoke(target, argsArray);
             }
         } catch (SecurityException ignored) {
@@ -3451,5 +3682,135 @@ public class OgnlRuntime {
 
     }
 
+    /**
+     * Detect the (reported) Major Java version running OGNL.
+     *
+     * Should support naming conventions of pre-JDK9 and JDK9+.
+     * See <a href="https://openjdk.java.net/jeps/223">JEP 223: New Version-String Scheme</a> for details.
+     *
+     * @return Detected Major Java Version, or 5 (minimum supported version for OGNL) if unable to detect.
+     *
+     * @since 3.1.25
+     */
+    static int detectMajorJavaVersion() {
+        int majorVersion = -1;
+        try {
+            majorVersion = parseMajorJavaVersion(System.getProperty("java.version"));
+        } catch (Exception ex) {
+            // Unavailable (SecurityException, etc.)
+        }
+        if (majorVersion == -1) {
+            majorVersion = 5;  // Return minimum supported Java version for OGNL
+        }
+
+        return majorVersion;
+    }
+
+    /**
+     * Parse a Java version string to determine the Major Java version.
+     *
+     * Should support naming conventions of pre-JDK9 and JDK9+.
+     * See <a href="https://openjdk.java.net/jeps/223">JEP 223: New Version-String Scheme</a> for details.
+     *
+     * @return Detected Major Java Version, or 5 (minimum supported version for OGNL) if unable to detect.
+     *
+     * @since 3.1.25
+     */
+    static int parseMajorJavaVersion(String versionString) {
+        int majorVersion = -1;
+        try {
+            if (versionString != null && versionString.length() > 0) {
+                final String[] sections = versionString.split("[\\.\\-\\+]");
+                final int firstSection;
+                final int secondSection;
+                if (sections.length > 0) {  // Should not happen, guard anyway
+                    if (sections[0].length() > 0) {
+                        if (sections.length > 1  && sections[1].length() > 0) {
+                            firstSection = Integer.parseInt(sections[0]);
+                            if (sections[1].matches("\\d+")) {
+                                secondSection = Integer.parseInt(sections[1]);
+                            } else {
+                                secondSection = -1;
+                            }
+                        } else  {
+                            firstSection = Integer.parseInt(sections[0]);
+                            secondSection = -1;
+                        }
+                        if (firstSection == 1 && secondSection != -1) {
+                            majorVersion = secondSection;  // Pre-JDK 9 versioning
+                        } else {
+                            majorVersion = firstSection;   // JDK9+ versioning
+                        }
+                    }
+                }
+            }
+        } catch (Exception ex) {
+            // Unavailable (NumberFormatException, etc.)
+        }
+        if (majorVersion == -1) {
+            majorVersion = 5;  // Return minimum supported Java version for OGNL
+        }
+
+        return majorVersion;
+    }
+
+    /**
+     * Returns the value of the flag indicating whether the JDK9+ access handler has been
+     *   been requested (it can then be used if the Major Java Version number is 9+).
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#USE_JDK9PLUS_ACESS_HANDLER}.
+     *
+     * @return true if a request to use the JDK9+ access handler is requested, false otherwise (always use pre-JDK9 handler).
+     *
+     * @since 3.1.25
+     */
+    public static boolean getUseJDK9PlusAccessHandlerValue() {
+        return _useJDK9PlusAccessHandler;
+    }
+
+    /**
+     * Returns the value of the flag indicating whether "stricter" invocation is
+     *   in effect or not.
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#USE_STRICTER_INVOCATION}.
+     *
+     * @return true if stricter invocation is in effect, false otherwise.
+     *
+     * @since 3.1.25
+     */
+    public static boolean getUseStricterInvocationValue() {
+        return _useStricterInvocation;
+    }
+
+    /**
+     * Returns the value of the flag indicating whether the OGNL SecurityManager was disabled
+     *   on initialization or not.
+     *
+     * Note: Value is controlled by a Java option flag {@link OgnlRuntime#OGNL_SECURITY_MANAGER} using
+     *       the value {@link OgnlRuntime#OGNL_SM_FORCE_DISABLE_ON_INIT}.
+     *
+     * @return true if OGNL SecurityManager was disabled on initialization, false otherwise.
+     *
+     * @since 3.1.25
+     *
+     * @return
+     */
+    public static boolean getDisableOgnlSecurityManagerOnInitValue() {
+        return _disableOgnlSecurityManagerOnInit;
+    }
+
+    /**
+     * Returns an indication as to whether the current state indicates the
+     *   JDK9+ (9 and later) access handler is being used / should be used.  This
+     *   is based on a combination of the detected Major Java Version and the
+     *   Java option flag {@link OgnlRuntime#USE_JDK9PLUS_ACESS_HANDLER}.
+     *
+     * @return true if the JDK9 and later access handler is being used / should be used, false otherwise.
+     *
+     * @since 3.1.25
+     */
+    public static boolean usingJDK9PlusAccessHandler() {
+        return (_jdk9Plus && _useJDK9PlusAccessHandler);
+    }
 
 }
